Store the transport id in identity transport field

Storing the transport name in the identity transport
field causes trouble if the name is empty.

BUG: 259054