identitydialog.cpp
@@ -730,11 +730,10 @@ namespace KMail {
     // "Advanced" tab:
     mReplyToEdit->setText( ident.replyToAddr() );
     mBccEdit->setText( ident.bcc() );
-    QString transportName = ident.transport();
-    Transport *transport =
-              TransportManager::self()->transportByName( transportName, false );
-    mTransportCheck->setChecked( transport != 0 );
-    mTransportCombo->setEnabled( transport != 0 );
+    const int transportId = ident.transport().isEmpty() ? -1 : ident.transport().toInt();
+    const Transport *transport = TransportManager::self()->transportById( transportId, true );
+    mTransportCheck->setChecked( transportId != -1 );
+    mTransportCombo->setEnabled( transportId != -1 );
     if ( transport )
       mTransportCombo->setCurrentTransport( transport->id() );
     mDictionaryCombo->setCurrentByDictionaryName( ident.dictionary() );
@@ -810,8 +809,8 @@ namespace KMail {
     // "Advanced" tab:
     ident.setReplyToAddr( mReplyToEdit->text() );
     ident.setBcc( mBccEdit->text() );
-    ident.setTransport( ( mTransportCheck->isChecked() ) ?
-                          mTransportCombo->currentText() : QString() );
+    ident.setTransport( mTransportCheck->isChecked() ? QString::number( mTransportCombo->currentTransportId() )
+                                                     : QString() );
     ident.setDictionary( mDictionaryCombo->currentDictionaryName() );
     Akonadi::Collection collection = mFccCombo->folderCollection();
     if ( collection.isValid() ) {
